Bug 400324 - photo viewer does not work
Summary: photo viewer does not work
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-26 08:58 UTC by Michael Tsang
Modified: 2020-08-18 18:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Tsang 2018-10-26 08:58:35 UTC
SUMMARY


STEPS TO REPRODUCE
1. Install kgpg and gwenview
2. set gwenview as default application for image/jpeg in system settings
3. Right click a photo id in key manager and show photo

OBSERVED RESULT
Nothing happens in the UI
Terminal shows 
sh: 1: org.kde.gwenview: not found
gpg: unable to execute external program
gpg: unable to display photo ID!

EXPECTED RESULT
A photo opens in gwenview

SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 5.14.2
KDE Frameworks Version: 5.51.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2020-08-12 11:51:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kgpg/-/merge_requests/1
Comment 2 Nicolas Fella 2020-08-18 13:33:18 UTC
Git commit a9f09321ed0244c623fc18ec0264eda1964cd512 by Nicolas Fella.
Committed on 18/08/2020 at 13:32.
Pushed by nicolasfella into branch 'release/20.08'.

Don't specify an image viewer when opening a key's photo

Opening images in Gwenview is currently broken because we pass the desktop entry (org.kde.gwenview) instead of the Exec line (gwenview).

Instead of deternining the image viewer ourselves we can simply deleate that to gpg since that supports using xdg-open.
gpg's behaviour is faulty in two ways at the moment:
1) display is preferred over xdg-open resulting in the image being opened via imagemagick
2) Opening via xdg-open is broken

I have sent patches for both to gnupg.

Until these are merged this will result in photos always being opened via imagemagick which is strictly better than not opening them at all.

M  +0    -10   keysmanager.cpp

https://invent.kde.org/utilities/kgpg/commit/a9f09321ed0244c623fc18ec0264eda1964cd512
Comment 3 Rolf Eike Beer 2020-08-18 18:38:40 UTC
Sorry that this took so long, I must have entirely missed the original mail regarding this bug.