Don't specify an image viewer when opening a key's photo

Opening images in Gwenview is currently broken because we pass the desktop entry (org.kde.gwenview) instead of the Exec line (gwenview).

Instead of deternining the image viewer ourselves we can simply deleate that to gpg since that supports using xdg-open.
gpg's behaviour is faulty in two ways at the moment:
1) display is preferred over xdg-open resulting in the image being opened via imagemagick
2) Opening via xdg-open is broken

I have sent patches for both to gnupg.

Until these are merged this will result in photos always being opened via imagemagick which is strictly better than not opening them at all.

BUG: 400324